fix overflow-x on sub-homes

--- a/public/stylesheets/components/bcd-footer.css
+++ b/public/stylesheets/components/bcd-footer.css
@@ -1,5 +1,6 @@
 #footer {
   background-color: #3a3a3a;
+  width: 100vw;
 }
 
 #footer h6 {
