--- a/public/stylesheets/components/bcd-sub-home.css
+++ b/public/stylesheets/components/bcd-sub-home.css
@@ -1,6 +1,8 @@
 /* xs: 360px x 540px <MOCKUP> */
 
-html {}
+html {
+  overflow-x: hidden;
+}
 
 #sub-home {
   position: relative;
@@ -11,7 +13,7 @@ html {}
   max-height: 768px;
   margin: 0;
   padding: 0;
-  overflow-y: hidden;
+  overflow-y: auto;
   background-color: #eeecec;
   text-align: center;
   text-align: left;
@@ -449,7 +451,7 @@ html {}
   #sub-home {
     position: relative;
     width: 100vw;
-    min-width: 1280px;
+    min-width: 100%;
     height: 100vh;
     min-height: 700px;
     max-height: 100vh;
